force-app/main/default/objects/BreezyRouter_Member__c/BreezyRouter_Member__c.object-meta.xml
<CustomObject>
    <description>This stores all the members or users that belong to the particular BreezyRouter Router</description>
    <label>BreezyRouter Member</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>BreezyRouter Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BreezyRouter Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>