force-app/main/default/objects/BreezyRouter_Member__c/fields/BreezyRouter__c.field-meta.xml
<CustomField>
    <fullName>BreezyRouter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Member lookup to the router</description>
    <inlineHelpText>Member lookup to the router</inlineHelpText>
    <label>BreezyRouter</label>
    <referenceTo>BreezyRouter__c</referenceTo>
    <relationshipLabel>BreezyRouter Members</relationshipLabel>
    <relationshipName>BreezyRouter_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>