force-app/main/default/objects/BreezyRouter_Member__c/fields/Routed_Date__c.field-meta.xml
<CustomField>
    <fullName>Routed_Date__c</fullName>
    <description>Datetime member was routed</description>
    <inlineHelpText>Datetime member was routed</inlineHelpText>
    <label>Routed Date</label>
    <type>DateTime</type>
</CustomField>