force-app/main/default/objects/BreezyRouter_Member__c/fields/Routed_Time__c.field-meta.xml
<CustomField>
    <fullName>Routed_Time__c</fullName>
    <description>The time the member was routed</description>
    <inlineHelpText>The time the member was routed</inlineHelpText>
    <label>Routed Time</label>
    <type>Time</type>
</CustomField>