force-app/main/default/objects/BreezyRouter_Member__c/fields/Status_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Reason__c</fullName>
    <description>Optional reason or note for the status change</description>
    <inlineHelpText>Optional: Provide a reason or note for this status change</inlineHelpText>
    <label>Status Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>