force-app/main/default/objects/BreezyRouter_Member__c/fields/Status_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records who changed the status last</description>
    <inlineHelpText>User who last changed the status</inlineHelpText>
    <label>Status Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Status_Changed_Members</relationshipName>
    <type>Lookup</type>
</CustomField>