force-app/main/default/objects/BreezyRouter_Member__c/fields/Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_Date__c</fullName>
    <description>Records the date and time when the status was last changed</description>
    <inlineHelpText>Date and time when the status was last updated</inlineHelpText>
    <label>Status Changed Date</label>
    <type>DateTime</type>
</CustomField>