force-app/main/default/objects/BreezyRouter_Member__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User lookup for Member</description>
    <inlineHelpText>User lookup for Member</inlineHelpText>
    <label>UserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BreezyRouter_Members</relationshipName>
    <type>Lookup</type>
</CustomField>